crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__segment_hour_h23.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::Hour))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "hour",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Hour",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "23",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "hh",
            ),
        ),
        (
            Id,
            String(
                "date-time-picker-segment-hour",
            ),
        ),
        (
            InputMode,
            String(
                "numeric",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
