crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__segment_year_set.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::Year))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "year",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Year",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "9999",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "2024",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "2024",
            ),
        ),
        (
            Id,
            String(
                "date-time-picker-segment-year",
            ),
        ),
        (
            InputMode,
            String(
                "numeric",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
