crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__separator.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: snapshot_attrs(&api.separator_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "separator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
