crates/ars-components/src/date_time/date_time_picker/snapshots/ars_components__date_time__date_time_picker__tests__trigger_open.snap
---
source: crates/ars-components/src/date_time/date_time_picker/tests.rs
expression: snapshot_attrs(&api.trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-time-picker",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Open date and time picker",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "date-time-picker-content",
            ),
        ),
        (
            Id,
            String(
                "date-time-picker-trigger",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
